# SimpleExchanger

./: .gitignore  CMakeLists.txt  Client.cpp  Common.hpp  Core.cpp  Core.h  Orders.cpp  Server.cpp  User.cpp  User.h  readme.md
import/json/: CMakeLists.txt
src/client/: CMakeLists.txt  Client.cpp
src/server/: CMakeLists.txt  Server.cpp
src/server/core/: CmakeLists.txt  Core.cpp  Core.h
src/server/core/include/: Singleton.hpp
src/server/core/orders/: Orders.cpp
src/server/core/src/: Core.h  Orders.cpp  Orders.h  User.cpp  User.h
src/server/core/user/: User.cpp
src/server/include/: CMakeLists.txt  Common.h
